{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 32,
  "lineage": "22eadcec-4cd2-bebf-ff65-4de89e89713b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bb560ae9f428cd2",
            "domain": "vpc",
            "id": "eipalloc-04bb560ae9f428cd2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-206-86-14.compute-1.amazonaws.com",
            "public_ip": "52.206.86.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a17dbad3cf7019",
            "association_id": "eipassoc-06588018876334b03",
            "domain": "vpc",
            "id": "eipalloc-0b6a17dbad3cf7019",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0657afdc9fbf172e3",
            "private_dns": "ip-10-0-2-246.ec2.internal",
            "private_ip": "10.0.2.246",
            "public_dns": "ec2-3-208-133-236.compute-1.amazonaws.com",
            "public_ip": "3.208.133.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:672578099891:instance/i-044cf520867d303bd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-044cf520867d303bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cross",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05f37570dc07dc8ee",
            "private_dns": "ip-10-0-3-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c2211d114c48d96d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03cf35ecc9835f16a",
            "tags": {
              "Name": "Private_Instance_1"
            },
            "tags_all": {
              "Name": "Private_Instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ca152338b119c44"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.private_sg",
            "aws_subnet.private_1",
            "aws_vpc.test_vpc",
            "data.aws_iam_policy_document.assume_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:672578099891:instance/i-011b4b5cba1743469",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011b4b5cba1743469",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06bbc10b9d9aec7de",
            "private_dns": "ip-10-0-4-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-075fab0122f3c2585",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c757946d85c898c9",
            "tags": {
              "Name": "Private_Instance_1"
            },
            "tags_all": {
              "Name": "Private_Instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ca152338b119c44"
            ]
          },
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_subnet.private_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:internet-gateway/igw-01368b42b9f300f2d",
            "id": "igw-01368b42b9f300f2d",
            "owner_id": "672578099891",
            "tags": {
              "Name": "My IGW"
            },
            "tags_all": {
              "Name": "My IGW"
            },
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bb560ae9f428cd2",
            "connectivity_type": "public",
            "id": "nat-0d0e78db493d8f0ac",
            "network_interface_id": "eni-0582463f58f638080",
            "private_ip": "10.0.1.114",
            "public_ip": "52.206.86.14",
            "subnet_id": "subnet-0c23b06a9c3bf7f45",
            "tags": {
              "Name": "Public_NAT_1"
            },
            "tags_all": {
              "Name": "Public_NAT_1"
            }
          },
          "dependencies": [
            "aws_eip.public_eip_1",
            "aws_internet_gateway.test_igw",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b6a17dbad3cf7019",
            "connectivity_type": "public",
            "id": "nat-075b960b3447b9bcc",
            "network_interface_id": "eni-0657afdc9fbf172e3",
            "private_ip": "10.0.2.246",
            "public_ip": "3.208.133.236",
            "subnet_id": "subnet-0bbd86e8dcaaa7d15",
            "tags": {
              "Name": "Public_NAT_2"
            },
            "tags_all": {
              "Name": "Public_NAT_2"
            }
          },
          "dependencies": [
            "aws_eip.public_eip_2",
            "aws_internet_gateway.test_igw",
            "aws_subnet.public_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:route-table/rtb-0bb1da8e2f7a9e9f6",
            "id": "rtb-0bb1da8e2f7a9e9f6",
            "owner_id": "672578099891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_Table_1"
            },
            "tags_all": {
              "Name": "Private_Route_Table_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:route-table/rtb-00f7a190c1d5b48aa",
            "id": "rtb-00f7a190c1d5b48aa",
            "owner_id": "672578099891",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_Route_Table_2"
            },
            "tags_all": {
              "Name": "Private_Route_Table_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:route-table/rtb-09b19919bb387b66c",
            "id": "rtb-09b19919bb387b66c",
            "owner_id": "672578099891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01368b42b9f300f2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table_1"
            },
            "tags_all": {
              "Name": "Public_Route_Table_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:route-table/rtb-0a64651f8382f8d43",
            "id": "rtb-0a64651f8382f8d43",
            "owner_id": "672578099891",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01368b42b9f300f2d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Route_Table_2"
            },
            "tags_all": {
              "Name": "Public_Route_Table_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6ef1177ce6d593b",
            "route_table_id": "rtb-0bb1da8e2f7a9e9f6",
            "subnet_id": "subnet-03cf35ecc9835f16a"
          },
          "dependencies": [
            "aws_route_table.private_rt_1",
            "aws_subnet.private_1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e099a244f72a07e",
            "route_table_id": "rtb-00f7a190c1d5b48aa",
            "subnet_id": "subnet-0c757946d85c898c9"
          },
          "dependencies": [
            "aws_route_table.private_rt_2",
            "aws_subnet.private_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04902486a8dab2785",
            "route_table_id": "rtb-09b19919bb387b66c",
            "subnet_id": "subnet-0c23b06a9c3bf7f45"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_rt_1",
            "aws_subnet.public_1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf1bfe070bc7cfda",
            "route_table_id": "rtb-0a64651f8382f8d43",
            "subnet_id": "subnet-0bbd86e8dcaaa7d15"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_rt_2",
            "aws_subnet.public_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:security-group/sg-07ca152338b119c44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ca152338b119c44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH over internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Private_Security_Group",
            "name_prefix": "",
            "owner_id": "672578099891",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:subnet/subnet-03cf35ecc9835f16a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cf35ecc9835f16a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672578099891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 1"
            },
            "tags_all": {
              "Name": "private Subnet 1"
            },
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:subnet/subnet-0c757946d85c898c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c757946d85c898c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672578099891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private Subnet 2"
            },
            "tags_all": {
              "Name": "private Subnet 2"
            },
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:subnet/subnet-0c23b06a9c3bf7f45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c23b06a9c3bf7f45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672578099891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:subnet/subnet-0bbd86e8dcaaa7d15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbd86e8dcaaa7d15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672578099891",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-08e196bd926326ffb"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:672578099891:vpc/vpc-08e196bd926326ffb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a94522528ffe97c0",
            "default_route_table_id": "rtb-0e011987f166ae628",
            "default_security_group_id": "sg-0b6a5a8507ca65f05",
            "dhcp_options_id": "dopt-02ad443086b4e5f47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08e196bd926326ffb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e011987f166ae628",
            "owner_id": "672578099891",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}